Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Visibility_Rule__c/Intake_Visibility_Rule__c.object-meta.xml
<CustomObject>
    <label>Intake Visibility Rule</label>
    <pluralLabel>Intake Visibility Rules</pluralLabel>
    <nameField>
        <label>Rule Number</label>
        <type>AutoNumber</type>
        <displayFormat>IVR-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Conditional visibility rule for an Intake Question.</description>
</CustomObject>