Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Visibility_Rule__c/fields/Intake_Question__c.field-meta.xml
<CustomField>
    <fullName>Intake_Question__c</fullName>
    <label>Intake Question</label>
    <type>MasterDetail</type>
    <referenceTo>Intake_Question__c</referenceTo>
    <relationshipLabel>Visibility Rules</relationshipLabel>
    <relationshipName>Visibility_Rules</relationshipName>
</CustomField>