Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Visibility_Rule__c/fields/Logic_Group__c.field-meta.xml
<CustomField>
    <fullName>Logic_Group__c</fullName>
    <label>Logic Group</label>
    <type>Text</type>
    <length>50</length>
    <inlineHelpText>Rules sharing the same group are ANDed; different groups are ORed. Defaults to "default".</inlineHelpText>
</CustomField>