Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Visibility_Rule__c/fields/Source_Question_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Question_Developer_Name__c</fullName>
    <label>Source Question Developer Name</label>
    <type>Text</type>
    <length>120</length>
    <required>true</required>
    <inlineHelpText>DeveloperName of the question whose answer drives this rule.</inlineHelpText>
</CustomField>