Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Visibility_Rule__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <type>Text</type>
    <length>255</length>
    <inlineHelpText>Comparison value. For "in", separate options with a semicolon.</inlineHelpText>
</CustomField>